tdf#160095: fix crash when using ALT+RETURN twice

Change-Id: Idc4c84039115c8d88418246a17e281c26fb49b70
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164592
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit 82e6236cd6ba6f45aa913a3be606e6b00f81fe07)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164614
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>